start html with bootstrap

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,4 @@
+// ---------------------VARIABLES------------------------------------------------------
 // Variables COULEURS
 $color-background: #eee;
 $color-grey-elements: #eee;
@@ -36,5 +37,13 @@ $shadows-md:0 0 3px rgba(0, 0, 0, 0.3);
 $shadows-lg:0 0 5px rgba(0, 0, 0, 0.4);
 $shadows-xl:0 10px 20px rgba(0, 0, 0, 0.5);
 
-// ---------------------------------------------------------------------------------------
-body {}
+// ---------------------MIXIN------------------------------------------------------
+// ---------------------CODE------------------------------------------------------
+body {
+    margin: auto;
+    max-width: $max-width-container;
+}
+
+.container {
+    display: flex;
+}
